<resources>
    <string name="app_name">Covid 19 Tracker</string>
    <string name="recovered">Recovered</string>

    <string name="global_stats">Global Stats</string>
    <string name="total_cases">Total Cases</string>

    <string name="critical">Critical</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="active">Active</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="affected_countries">Affected Countries</string>

</resources>